--- a/contact.html
+++ b/contact.html
@@ -144,5 +144,14 @@
 </div>
 
 </div>
+
+<section class="cookie">
+	<div class="container">
+		<div class="cookie__wrap">
+			<h5 class="cookie_message lang-cookie-message">АО «Гальватек» обрабатывает Cookies для корректной работы сайта и персонализации сервисов, в т.ч. с использованием метрических программ и систем аналитик. Вы можете запретить обработку Cookies в настройках браузера</h5>
+			<div class="cookie__btn"><a class="cookie_success btn btn__primary lang-cookie-success">Принять</a></div>
+		</div>
+	</div>
+</section>
 </body>
 </html>
