--- a/about-us.html
+++ b/about-us.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 
 
-	<title>Гальватек - Технологии и решения для автоматизации производства</title>
+	<title>Гальватек - О компании</title>
 	<meta name="description" content="Гальватек – молодая и амбициозная технологическая компания, разрабатывающая наукоемкие решения на рынке автоматизации производства. Ключевое направление - гальванические линии, оборудование и программное обеспечение для них. Среди наших клиентов - крупные предприятия и производственные объекты машиностроительной отрасли, госкомпании.">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -145,7 +145,9 @@
 <section class="cookie">
 	<div class="container">
 		<div class="cookie__wrap">
-			<h5 class="cookie_message lang-cookie-message">АО «Гальватек» обрабатывает Cookies для корректной работы сайта и персонализации сервисов, в т.ч. с использованием метрических программ и систем аналитик. Вы можете запретить обработку Cookies в настройках браузера</h5>
+			<div class="cookie_message">
+			<h5 class=" lang-cookie-message">АО «Гальватек» обрабатывает Cookies для корректной работы сайта и персонализации сервисов, в т.ч. с использованием метрических программ и систем аналитик. Вы можете запретить обработку Cookies в настройках браузера  <a class="cookie__privacy_link ">Политика конфедициальности</a></h5>
+			</div>
 			<div class="cookie__btn"><a class="cookie_success btn btn__primary lang-cookie-success">Принять</a></div>
 		</div>
 	</div>
