--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 		<div class="container">
 			<div class="services__list">
 				<div class="services__item">
-					<a href="#" class="services__link">
+					<a href="/supplies.html" class="services__link">
 						<img src="/images/banner/1.png" class="card-img" alt="...">
 						<div class="card-img-overlay">
 							<h5 class="card-title lang-services-supplies-galvanic">Поставки электрического оборудования для гальваники</h5>
@@ -105,7 +105,7 @@
 					</a>
 				</div>
 				<div class="services__item">
-					<a href="#" class="services__link">
+					<a href="/supplies-electric.html" class="services__link">
 						<img src="/images/banner/2.png" class="card-img" alt="...">
 						<div class="card-img-overlay">
 							<h5 class="card-title lang-services-supplies-electric">Поставки электрического оборудования для гальваники</h5>
@@ -113,16 +113,16 @@
 					</a>
 				</div>
 				<div class="services__item">
-					<a href="#" class="services__link">
-						<img src="/images/banner/3.png" class="card-img" alt="...">
+					<a href="/services-develop.html" class="services__link">
+						<img src="/images/banner/3.png" class="card-img" alt="Поставки электрического оборудования для гальваники">
 						<div class="card-img-overlay">
 							<h5 class="card-title lang-services-develop">Поставки электрического оборудования для гальваники</h5>
 						</div>
 					</a>
 				</div>
 				<div class="services__item">
-					<a href="#" class="services__link">
-						<img src="/images/banner/4.png" class="card-img" alt="...">
+					<a href="/services-designing.html" class="services__link">
+						<img src="/images/banner/4.png" class="card-img" alt="Поставки электрического оборудования для гальваники">
 						<div class="card-img-overlay">
 							<h5 class="card-title lang-services-designing">Поставки электрического оборудования для гальваники</h5>
 						</div>
@@ -178,10 +178,13 @@
 
 </div>
 
+
 <section class="cookie">
 	<div class="container">
 		<div class="cookie__wrap">
-			<h5 class="cookie_message lang-cookie-message">АО «Гальватек» обрабатывает Cookies для корректной работы сайта и персонализации сервисов, в т.ч. с использованием метрических программ и систем аналитик. Вы можете запретить обработку Cookies в настройках браузера</h5>
+			<div class="cookie_message">
+			<h5 class=" lang-cookie-message">АО «Гальватек» обрабатывает Cookies для корректной работы сайта и персонализации сервисов, в т.ч. с использованием метрических программ и систем аналитик. Вы можете запретить обработку Cookies в настройках браузера  <a class="cookie__privacy_link ">Политика конфедициальности</a></h5>
+			</div>
 			<div class="cookie__btn"><a class="cookie_success btn btn__primary lang-cookie-success">Принять</a></div>
 		</div>
 	</div>
