--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Гальватек - Технологии и решения для автоматизации производства</title>
+	<title>Гальватек - Контакты</title>
 	<meta name="description" content="Гальватек – молодая и амбициозная технологическая компания, разрабатывающая наукоемкие решения на рынке автоматизации производства. Ключевое направление - гальванические линии, оборудование и программное обеспечение для них. Среди наших клиентов - крупные предприятия и производственные объекты машиностроительной отрасли, госкомпании.">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -92,7 +92,7 @@
 				<div class="footer__phone"><a href="tel:74956635411" class="phone__number"><i class= "bx bx-phone"> </i> 7 (495) 66-35-411</a></div>
 				<div class="footer__email"><a href="mailto:info@galvatec.ru" class="phone__number"><i class="bx bx-envelope"> </i> info@galvatec.ru</a></div>
 			</div>
-			<p class="contact contact-address lang-address">123112 г. Москва, Пресненская набережная, д.12, этаж 45, комната 82, офис 2.</p>
+			<address class="contact contact-address lang-address">123112 г. Москва, Пресненская набережная, д.12, этаж 45, комната 82, офис 2.</address>
 		
 			<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A970b051a2fcd2421f5ff3acd94027fafefb9234ddf17b42c7a1e9623ac29d310&amp;source=constructor" width="100%" height="400" frameborder="0"></iframe>
 		</div>
@@ -148,7 +148,9 @@
 <section class="cookie">
 	<div class="container">
 		<div class="cookie__wrap">
-			<h5 class="cookie_message lang-cookie-message">АО «Гальватек» обрабатывает Cookies для корректной работы сайта и персонализации сервисов, в т.ч. с использованием метрических программ и систем аналитик. Вы можете запретить обработку Cookies в настройках браузера</h5>
+			<div class="cookie_message">
+			<h5 class=" lang-cookie-message">АО «Гальватек» обрабатывает Cookies для корректной работы сайта и персонализации сервисов, в т.ч. с использованием метрических программ и систем аналитик. Вы можете запретить обработку Cookies в настройках браузера  <a class="cookie__privacy_link ">Политика конфедициальности</a></h5>
+			</div>
 			<div class="cookie__btn"><a class="cookie_success btn btn__primary lang-cookie-success">Принять</a></div>
 		</div>
 	</div>
