--- a/supplies-electric.html
+++ b/supplies-electric.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 
 
-	<title>Гальватек - Проектирование</title>
+	<title>Гальватек - Поставка оборудования</title>
 	<meta name="description" content="Гальватек – молодая и амбициозная технологическая компания, разрабатывающая наукоемкие решения на рынке автоматизации производства. Ключевое направление - гальванические линии, оборудование и программное обеспечение для них. Среди наших клиентов - крупные предприятия и производственные объекты машиностроительной отрасли, госкомпании.">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -83,36 +83,13 @@
 			</ul>
 		</div>
 	</header>
-<main class="services">
+<main class="aboun-us">
 	<div class="container">
-		<div class="services__wrap">
-			<h2 class="title lang-menu-designing">Проектирование</h2>
-			<div class="services__content">
-				<div class="services__item">
-					<a href="/supplies-electric.html" class="services__link">
-						<img src="/images/banner/2.png" class="card-img" alt="...">
-						<div class="card-img-overlay">
-							<h5 class="card-title lang-services-supplies-galvanic">Поставки электрического оборудования для гальваники</h5>
-						</div>
-					</a>
-				</div>
-				<div class="services__item">
-					<a href="/services-develop.html" class="services__link">
-						<img src="/images/banner/3.png" class="card-img" alt="...">
-						<div class="card-img-overlay">
-							<h5 class="card-title lang-services-develop">Поставки электрического оборудования для гальваники</h5>
-						</div>
-					</a>
-				</div>
-				<div class="services__item">
-					<a href="/services-designing.html" class="services__link">
-						<img src="/images/banner/4.png" class="card-img" alt="...">
-						<div class="card-img-overlay">
-							<h5 class="card-title lang-services-designing">Поставки электрического оборудования для гальваники</h5>
-						</div>
-					</a>
-				</div>
-			</div>
+		<div class="about-us__wrap">
+			<h2 class="title lang-services-supplies-electric">Поставки электрического оборудования для гальваники</h2>
+			<p class="desc lang-services-supplies-electric-message">	Гальваническая линия предназначена для получения однослойных и многослойных гальванических покрытий из меди, никеля, цинка, олово-висмута, олово-свинца, золота, серебра и других металлов с заданными функциональными свойствами.		
+				Мы разрабатываем и производим гальванические линии для нанесения всех типов гальванических покрытий и разной степени автоматизации!</p>
+			<img src="/images/banner/2.png" alt="Поставки электрического оборудования для гальваники" class="img-page">
 		</div>
 	</div>
 </main>
@@ -162,6 +139,7 @@
 </div>
 
 </div>
+
 
 <section class="cookie">
 	<div class="container">
