--- a/about-us.html
+++ b/about-us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
 
@@ -88,7 +88,7 @@
 		<div class="about-us__wrap">
 			<h2 class="title lang-menu-about">О компании</h2>
 			<p class="desc lang-desc">Гальватек – молодая и амбициозная технологическая компания, разрабатывающая наукоемкие решения на рынке автоматизации производства. Ключевое направление - гальванические линии, оборудование и программное обеспечение для них. Среди наших клиентов - крупные предприятия и производственные объекты машиностроительной отрасли, госкомпании.</p>
-			<img src="/images/banner/5.png" alt="" class="img-page">
+			<img src="/images/banner/5.webp" alt="" class="img-page">
 			<h2 class="title lang-jobs">Вакансии</h2>
 			<a href="#" class="work__link">Ведущий инженер-проектировщик (гальваника) <i class="bx bx-arrow-back"></i></a>
 		</div>
@@ -146,9 +146,9 @@
 	<div class="container">
 		<div class="cookie__wrap">
 			<div class="cookie_message">
-			<h5 class=" lang-cookie-message">АО «Гальватек» обрабатывает Cookies для корректной работы сайта и персонализации сервисов, в т.ч. с использованием метрических программ и систем аналитик. Вы можете запретить обработку Cookies в настройках браузера  <a class="cookie__privacy_link ">Политика конфедициальности</a></h5>
+			<p class=" lang-cookie-message">АО «Гальватек» обрабатывает Cookies для корректной работы сайта и персонализации сервисов, в т.ч. с использованием метрических программ и систем аналитик. Вы можете запретить обработку Cookies в настройках браузера  <a class="cookie__privacy_link ">Политика конфедициальности</a></p>
 			</div>
-			<div class="cookie__btn"><a class="cookie_success btn btn__primary lang-cookie-success">Принять</a></div>
+			<div class="cookie__btn"><a href="#" class="cookie_success btn btn__primary lang-cookie-success">Принять</a></div>
 		</div>
 	</div>
 </section>
