--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
 
@@ -98,7 +98,7 @@
 			<div class="services__list">
 				<div class="services__item">
 					<a href="/supplies.html" class="services__link">
-						<img src="/images/banner/1.png" class="card-img" alt="...">
+						<img src="/images/banner/1.webp" class="card-img" alt="...">
 						<div class="card-img-overlay">
 							<h5 class="card-title lang-services-supplies-galvanic">Поставки электрического оборудования для гальваники</h5>
 						</div>
@@ -106,7 +106,7 @@
 				</div>
 				<div class="services__item">
 					<a href="/supplies-electric.html" class="services__link">
-						<img src="/images/banner/2.png" class="card-img" alt="...">
+						<img src="/images/banner/2.webp" class="card-img" alt="...">
 						<div class="card-img-overlay">
 							<h5 class="card-title lang-services-supplies-electric">Поставки электрического оборудования для гальваники</h5>
 						</div>
@@ -114,7 +114,7 @@
 				</div>
 				<div class="services__item">
 					<a href="/services-develop.html" class="services__link">
-						<img src="/images/banner/3.png" class="card-img" alt="Поставки электрического оборудования для гальваники">
+						<img src="/images/banner/3.webp" class="card-img" alt="Поставки электрического оборудования для гальваники">
 						<div class="card-img-overlay">
 							<h5 class="card-title lang-services-develop">Поставки электрического оборудования для гальваники</h5>
 						</div>
@@ -122,7 +122,7 @@
 				</div>
 				<div class="services__item">
 					<a href="/services-designing.html" class="services__link">
-						<img src="/images/banner/4.png" class="card-img" alt="Поставки электрического оборудования для гальваники">
+						<img src="/images/banner/4.webp" class="card-img" alt="Поставки электрического оборудования для гальваники">
 						<div class="card-img-overlay">
 							<h5 class="card-title lang-services-designing">Поставки электрического оборудования для гальваники</h5>
 						</div>
@@ -183,9 +183,9 @@
 	<div class="container">
 		<div class="cookie__wrap">
 			<div class="cookie_message">
-			<h5 class=" lang-cookie-message">АО «Гальватек» обрабатывает Cookies для корректной работы сайта и персонализации сервисов, в т.ч. с использованием метрических программ и систем аналитик. Вы можете запретить обработку Cookies в настройках браузера  <a class="cookie__privacy_link ">Политика конфедициальности</a></h5>
+			<p class=" lang-cookie-message">АО «Гальватек» обрабатывает Cookies для корректной работы сайта и персонализации сервисов, в т.ч. с использованием метрических программ и систем аналитик. Вы можете запретить обработку Cookies в настройках браузера  <a class="cookie__privacy_link ">Политика конфедициальности</a></p>
 			</div>
-			<div class="cookie__btn"><a class="cookie_success btn btn__primary lang-cookie-success">Принять</a></div>
+			<div class="cookie__btn"><a href="#" class="cookie_success btn btn__primary lang-cookie-success">Принять</a></div>
 		</div>
 	</div>
 </section>
