--- a/supplies.html
+++ b/supplies.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
 
@@ -89,7 +89,7 @@
 			<h2 class="title lang-services-supplies-galvanic">Поставки электрического оборудования для гальваники</h2>
 			<p class="desc lang-services-supplies-galvanic-message">	Гальваническая линия предназначена для получения однослойных и многослойных гальванических покрытий из меди, никеля, цинка, олово-висмута, олово-свинца, золота, серебра и других металлов с заданными функциональными свойствами.		
 				Мы разрабатываем и производим гальванические линии для нанесения всех типов гальванических покрытий и разной степени автоматизации!</p>
-			<img src="/images/banner/1.png" alt="Поставки электрического оборудования для гальваники" class="img-page">
+			<img src="/images/banner/1.webp" alt="Поставки электрического оборудования для гальваники" class="img-page">
 		</div>
 	</div>
 </main>
@@ -140,14 +140,13 @@
 
 </div>
 
-
 <section class="cookie">
 	<div class="container">
 		<div class="cookie__wrap">
 			<div class="cookie_message">
-			<h5 class=" lang-cookie-message">АО «Гальватек» обрабатывает Cookies для корректной работы сайта и персонализации сервисов, в т.ч. с использованием метрических программ и систем аналитик. Вы можете запретить обработку Cookies в настройках браузера  <a class="cookie__privacy_link ">Политика конфедициальности</a></h5>
+			<p class=" lang-cookie-message">АО «Гальватек» обрабатывает Cookies для корректной работы сайта и персонализации сервисов, в т.ч. с использованием метрических программ и систем аналитик. Вы можете запретить обработку Cookies в настройках браузера  <a class="cookie__privacy_link ">Политика конфедициальности</a></p>
 			</div>
-			<div class="cookie__btn"><a class="cookie_success btn btn__primary lang-cookie-success">Принять</a></div>
+			<div class="cookie__btn"><a href="#" class="cookie_success btn btn__primary lang-cookie-success">Принять</a></div>
 		</div>
 	</div>
 </section>
