--- a/privacy.html
+++ b/privacy.html
@@ -41,7 +41,7 @@
 	<header class="header">
 		<div class="container header__wrap">
 			<div class="header__logo">
-				<a href="/" class="logo"><img src="/images/logo.svg" alt="#" class="logo__img logo-dark"><img src="/images/logo-light.svg" alt="#" class="logo__img logo-light"></a>
+				<a href="/" class="logo"><img src="/images/logo.svg" alt="Гальватек" class="logo__img logo-dark"><img src="/images/logo-light.svg" alt="Гальватек" class="logo__img logo-light"></a>
 			</div>
 			<nav class="header__menu">
 				<div class="header__menu__wrap">
@@ -233,7 +233,7 @@ AO «Гальватек»
 	<span class="ebcf_close">&times;</span>
 	<div class="form">
 	<h3 class="form__title lang-message-form">Оставьте заявку, мы вам поможем!</h3>
-	<div class="img-form"><img src="/images/icon/success.svg" alt="" class="ico-success"></div>
+	<div class="img-form"><img src="/images/icon/success.svg" alt="success" class="ico-success"></div>
 	<h3 class="form__title title_success lang-thank-call">Спасибо за заявку!</h3>
 	<p class="desc_success  lang-thank-message">В ближайшее время с вами свяжется наш менеджер.</p>
 	<form  id="call" class="form__call">
