--- a/about-us.html
+++ b/about-us.html
@@ -41,7 +41,7 @@
 	<header class="header">
 		<div class="container header__wrap">
 			<div class="header__logo">
-				<a href="/" class="logo"><img src="/images/logo.svg" alt="#" class="logo__img logo-dark"><img src="/images/logo-light.svg" alt="#" class="logo__img logo-light"></a>
+				<a href="/" class="logo"><img src="/images/logo.svg" alt="Гальватек" class="logo__img logo-dark"><img src="/images/logo-light.svg" alt="Гальватек" class="logo__img logo-light"></a>
 			</div>
 			<nav class="header__menu">
 				<div class="header__menu__wrap">
@@ -88,7 +88,7 @@
 		<div class="about-us__wrap">
 			<h2 class="title lang-menu-about">О компании</h2>
 			<p class="desc lang-desc">Гальватек – молодая и амбициозная технологическая компания, разрабатывающая наукоемкие решения на рынке автоматизации производства. Ключевое направление - гальванические линии, оборудование и программное обеспечение для них. Среди наших клиентов - крупные предприятия и производственные объекты машиностроительной отрасли, госкомпании.</p>
-			<img src="/images/banner/5.webp" alt="" class="img-page">
+			<img src="/images/banner/5.webp" alt="О компании" class="img-page">
 			<h2 class="title lang-jobs">Вакансии</h2>
 			<a href="#" class="work__link">Ведущий инженер-проектировщик (гальваника) <i class="bx bx-arrow-back"></i></a>
 		</div>
@@ -121,7 +121,7 @@
 	<span class="ebcf_close">&times;</span>
 	<div class="form">
 	<h3 class="form__title lang-message-form">Оставьте заявку, мы вам поможем!</h3>
-	<div class="img-form"><img src="/images/icon/success.svg" alt="" class="ico-success"></div>
+	<div class="img-form"><img src="/images/icon/success.svg" alt="success" class="ico-success"></div>
 	<h3 class="form__title title_success lang-thank-call">Спасибо за заявку!</h3>
 	<p class="desc_success  lang-thank-message">В ближайшее время с вами свяжется наш менеджер.</p>
 	<form  id="call" class="form__call">
