--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<header class="header">
 		<div class="container header__wrap">
 			<div class="header__logo">
-				<a href="/" class="logo"><img src="/images/logo.svg" alt="#" class="logo__img logo-dark"><img src="/images/logo-light.svg" alt="#" class="logo__img logo-light"></a>
+				<a href="/" class="logo"><img src="/images/logo.svg" alt="Гальватек" class="logo__img logo-dark"><img src="/images/logo-light.svg" alt="#" class="logo__img logo-light"></a>
 			</div>
 			<nav class="header__menu">
 				<div class="header__menu__wrap">
@@ -98,7 +98,7 @@
 			<div class="services__list">
 				<div class="services__item">
 					<a href="/supplies.html" class="services__link">
-						<img src="/images/banner/1.webp" class="card-img" alt="...">
+						<img src="/images/banner/1.webp" class="card-img" alt="Поставки электрического оборудования для гальваники">
 						<div class="card-img-overlay">
 							<h5 class="card-title lang-services-supplies-galvanic">Поставки электрического оборудования для гальваники</h5>
 						</div>
@@ -106,7 +106,7 @@
 				</div>
 				<div class="services__item">
 					<a href="/supplies-electric.html" class="services__link">
-						<img src="/images/banner/2.webp" class="card-img" alt="...">
+						<img src="/images/banner/2.webp" class="card-img" alt="Поставки электрического оборудования для гальваники">
 						<div class="card-img-overlay">
 							<h5 class="card-title lang-services-supplies-electric">Поставки электрического оборудования для гальваники</h5>
 						</div>
@@ -158,7 +158,7 @@
     <span class="ebcf_close">&times;</span>
 		<div class="form">
 		<h3 class="form__title lang-message-form">Оставьте заявку, мы вам поможем!</h3>
-		<div class="img-form"><img src="/images/icon/success.svg" alt="" class="ico-success"></div>
+		<div class="img-form"><img src="/images/icon/success.svg" alt="success" class="ico-success"></div>
 		<h3 class="form__title title_success lang-thank-call">Спасибо за заявку!</h3>
 		<p class="desc_success  lang-thank-message">В ближайшее время с вами свяжется наш менеджер.</p>
 		<form  id="call" class="form__call">
