--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<title>Гальватек - Технологии и решения для автоматизации производства</title>
 	<meta name="description" content="Гальватек – молодая и амбициозная технологическая компания, разрабатывающая наукоемкие решения на рынке автоматизации производства. Ключевое направление - гальванические линии, оборудование и программное обеспечение для них. Среди наших клиентов - крупные предприятия и производственные объекты машиностроительной отрасли, госкомпании.">
-
+	<meta name="keywords" content="гальваника, гальванические линии, оборудование для гальваники, электролизер, гальванический элемент, разработка автоматизации, проектирование разработка оборудования, гальваника купить, электро оборудование, аппарат для гальванизации">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 	<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
@@ -21,9 +21,6 @@
 	<meta name="msapplication-config" content="images/browserconfig.xml">
 	<meta name="theme-color" content="#ffffff">
 	<meta property="og:image" content="images/preview.jpg">
-
- 	<!-- <link rel="stylesheet" href="libs/bootstrap/css/bootstrap-reboot.min.css">
-	<link rel="stylesheet" href="libs/bootstrap/css/bootstrap-grid.min.css">  -->
 	
 	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 	<link rel="stylesheet" href="css/reset.css">
