--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
 	<title>Гальватек - Технологии и решения для автоматизации производства</title>
-	<meta name="description" content="Гальватек – молодая и амбициозная технологическая компания, разрабатывающая наукоемкие решения на рынке автоматизации производства. Ключевое направление - гальванические линии, оборудование и программное обеспечение для них. Среди наших клиентов - крупные предприятия и производственные объекты машиностроительной отрасли, госкомпании.">
+	<meta name="description" content="Гальватек – молодая технологическая компания, разрабатывающая наукоемкие решения на рынке автоматизации производства. Ключевое направление - гальванические линии, оборудование и программное обеспечение для них. Среди наших клиентов - крупные предприятия и производственные объекты машиностроительной отрасли, госкомпании.">
 	<meta name="keywords" content="гальваника, гальванические линии, оборудование для гальваники, электролизер, гальванический элемент, разработка автоматизации, проектирование разработка оборудования, гальваника купить, электро оборудование, аппарат для гальванизации">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
