text tin and phone fix

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 
 	<title>Гальватек - Контакты</title>
-	<meta name="description" content="Гальватек – молодая и амбициозная технологическая компания, разрабатывающая наукоемкие решения на рынке автоматизации производства. Ключевое направление - гальванические линии, оборудование и программное обеспечение для них. Среди наших клиентов - крупные предприятия и производственные объекты машиностроительной отрасли, госкомпании.">
+	<meta name="description" content="Гальватек – молодая технологическая компания, разрабатывающая наукоемкие решения на рынке автоматизации производства. Ключевое направление - гальванические линии, оборудование и программное обеспечение для них. Среди наших клиентов - крупные предприятия и производственные объекты машиностроительной отрасли.">
 
 	<meta name="keywords" content="гальваника, гальванические линии, оборудование для гальваники, электролизер, гальванический элемент, разработка автоматизации, проектирование разработка оборудования, гальваника купить, электро оборудование, аппарат для гальванизации">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -53,7 +53,7 @@
 			<input type="checkbox" id="menu">
 			<label for="menu" class="menu-btn"><i class="ico-menu"></i></label>
 			</nav>
-			<div class="header__phone"><a href="tel:74956635411" class="phone__number"><i class="ico-phone"> </i>7 (495) 66-35-411</a></div>
+			<div class="header__phone"><a href="tel:74956635411" class="phone__number"><i class="ico-phone"> </i>7 (495) 663-54-11</a></div>
 			<div class="header__lang">
 				<div class="select">
 					<div class="custom-select">
@@ -73,7 +73,7 @@
 			<div class="header__call"><i  class="btn btn__primary call lang-btn-call">Заказать проект</i></div>
 		</div>
 		<div class="header__menu-open">
-			<div class="header__menu-open__phone"><a href="tel:74956635411" class="phone__number"><i class="ico-phone"> </i>7 (495) 66-35-411</a></div>
+			<div class="header__menu-open__phone"><a href="tel:74956635411" class="phone__number"><i class="ico-phone"> </i>7 (495) 663-54-11</a></div>
 			<div class="header__menu-open__call"><a href="#" id="mySizeChart" class="btn btn__primary call lang-btn-call">Заказать проект</a></div>
 			<ul class="header__menu-open-list">
 				<li class="menu-item"><a href="/about-us.html" class="menu-item__link lang-menu-about">О компании</a></li>
@@ -87,9 +87,9 @@
 		<div class="contact__wrap">
 			<h2 class="title lang-menu-contact">Контакты</h2>
 			<p class="contact lang-copy-title">АО “Гальватек”</p>
-			<p class="contact">ОГРН: 1237700247916</p>
+			<p class="contact">ИНН: 9703140400</p>
 			<div class="footer__contact">
-				<div class="footer__phone"><a href="tel:74956635411" class="phone__number"><i class= "bx bx-phone"> </i> 7 (495) 66-35-411</a></div>
+				<div class="footer__phone"><a href="tel:74956635411" class="phone__number"><i class= "bx bx-phone"> </i> 7 (495) 663-54-11</a></div>
 				<div class="footer__email"><a href="mailto:info@galvatec.ru" class="phone__number"><i class="bx bx-envelope"> </i> info@galvatec.ru</a></div>
 			</div>
 			<address class="contact contact-address lang-address">123112 г. Москва, Пресненская набережная, д.12, этаж 45, комната 82, офис 2.</address>
@@ -106,7 +106,7 @@
 		<div class="footer__wrap">
 			<div class="footer__copy"><span class="lang-copy-title"> АО “Гальватек” 2023</span></div>
 			<div class="footer__contact">
-				<div class="footer__phone"><a href="tel:74956635411" class="phone__number"><i class= "bx bx-phone"> </i> 7 (495) 66-35-411</a></div>
+				<div class="footer__phone"><a href="tel:74956635411" class="phone__number"><i class= "bx bx-phone"> </i> 7 (495) 663-54-11</a></div>
 				<div class="footer__email"><a href="mailto:info@galvatec.ru" class="phone__number"><i class="bx bx-envelope"> </i> info@galvatec.ru</a></div>
 			</div>
 			<div class="footer__soc">
