--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
 			<nav class="header__menu">
 				<div class="header__menu__wrap">
 				<ul class="header__menu-list">
-					<li class="menu-item"><a href="/about-us.html" class="menu-item__link lang-menu-about">О компании</a></li>
+					<li class="menu-item"><a href="https://cat.galvatec.ru/" class="menu-item__link lang-menu-about">Каталог</a></li>
 					<li class="menu-item"><a href="/services.html" class="menu-item__link lang-menu-designing">Проектирование</a></li>
+					<li class="menu-item"><a href="/about-us.html" class="menu-item__link lang-menu-about">О компании</a></li>
 					<li class="menu-item"><a href="/contact.html" class="menu-item__link lang-menu-contact">Контакты</a></li>
 				</ul>
 			</div>
