--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
 			<div class="header__menu-open__phone"><a href="tel:74956635411" class="phone__number"><i class="ico-phone"> </i>7 (495) 663-54-11</a></div>
 			<div class="header__menu-open__call"><a href="#" id="mySizeChart" class="btn btn__primary call lang-btn-call">Заказать проект</a></div>
 			<ul class="header__menu-open-list">
+				<li class="menu-item"><a href="https://cat.galvatec.ru/" class="menu-item__link lang-menu-cat">Каталог</a></li>
+				<li class="menu-item"><a href="/services.html" class="menu-item__link lang-menu-designing">Проектирование</a></li>
 				<li class="menu-item"><a href="/about-us.html" class="menu-item__link lang-menu-about">О компании</a></li>
-					<li class="menu-item"><a href="/services.html" class="menu-item__link lang-menu-designing">Проектирование</a></li>
-					<li class="menu-item"><a href="/contact.html" class="menu-item__link lang-menu-contact">Контакты</a></li>
+				<li class="menu-item"><a href="/contact.html" class="menu-item__link lang-menu-contact">Контакты</a></li>
 			</ul>
 		</div>
 	</header>
